# viscacha

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: index.html  style.css  tailwind.config.js
src/: checker.rs  detector.rs  display.rs  lib.rs  main.rs  parser.rs
tests/: integration.rs
