[package]
name = "viscacha"
version = "0.1.0"
edition = "2021"
description = "Toolchain version checker — reads version constraint files and checks installed vs required versions"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
